# Collanka

./: .gitignore  CMakeLists.txt  LICENSE  MACOS_RELEASE_NOTES.md  README.md  build_compile.bat  build_config.bat
.github/workflows/: build.yml
DSP/: CollatzFormantFilter.cpp  CollatzFormantFilter.h  CollatzWavetableOsc.h  ModMatrix.cpp  ModMatrix.h  OscillatorBank.cpp  OscillatorBank.h  SubHarmonicExciter.cpp  SynthEngine.cpp  SynthEngine.h  TransientWaveshaper.cpp  TransientWaveshaper.h
MCEServer/: package-lock.json  package.json  server.js  start_mce.bat
Presets/Factory/: 808_Classic.xml  808_Distorted.xml  808_Punchy.xml  808_Sliding.xml  808_Trap_Sub.xml  Hybrid_808_Reese.xml  Hybrid_Future_RnB.xml  Hybrid_Pluck_Reese.xml  Hybrid_Sub_Pluck.xml  Hybrid_Vintage_Moog.xml  Pluck_Bright_Club.xml  Pluck_Deep.xml  Pluck_Funk.xml  Pluck_LoFi.xml  Pluck_Warm_RnB.xml  Reese_Aggressive.xml  Reese_Collatz_Drone.xml  Reese_Collatz_Growl.xml  Reese_Collatz_Sweep.xml  Reese_Collatz_Tearout.xml  Reese_Collatz_Wobble.xml  Reese_Dark.xml  Reese_NeoSoul.xml  Reese_Subtle.xml  Reese_Wide.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
UI/: AIAssistTab.cpp  HeaderBar.cpp  HeaderBar.h
scripts/: README_mac.txt  install_mac.sh
tools/: generate_collatz_wavetables.py
